Bug 1176864 - Truncate modulo operator for int32 r=h4writer, r=nbp